--- a/view/header.mustache
+++ b/view/header.mustache
@@ -25,7 +25,8 @@
         <a href="/Lobby/mostrarPantallaLobby"><img src="../public/hornerito-panz-lirt.svg"
                 class="logo shake-left-right"></a>
         <h1 class="nombre ">Animalia: Hornero Editions</h1>
+        <div class="centrado">
 
-        <a href="/Perfil/mostrarPantallaPerfil"><img src="../public/epic-hornero-admin.svg" class="account"></a>
-
+            <a href="/Perfil/mostrarPantallaPerfil"><img src="../public/epic-hornero-admin.svg" class="account"></a>
+        </div>
     </header>
