--- a/view/sugerenciaView.mustache
+++ b/view/sugerenciaView.mustache
@@ -17,10 +17,12 @@
                 <input class="sugerencia" type="text" placeholder="Ingrese una respuesta" name="respuesta2">
                 <input class="sugerencia" type="text" placeholder="Ingrese una respuesta" name="respuesta3">
                 <input class="sugerencia" type="text" placeholder="Ingrese una respuesta" name="respuesta4">
-                <input class="boton-sec" type="submit" value="Confirmar" name="send">
+                <div>
+                    <input class="boton-sec" type="submit" value="Confirmar" name="send">
+                </div>
             </form>
         </div>
-        
+
     </div>
     <div class="formulario">
         <h1>Sugerir categoria</h1>
