--- a/view/header.mustache
+++ b/view/header.mustache
@@ -25,8 +25,11 @@
         <a href="/Lobby/mostrarPantallaLobby"><img src="../public/hornerito-panz-lirt.svg"
                 class="logo shake-left-right"></a>
         <h1 class="nombre ">Animalia: Hornero Editions</h1>
-        <div class="centrado">
-
+        
+          
             <a href="/Perfil/mostrarPantallaPerfil"><img src="../public/epic-hornero-admin.svg" class="account"></a>
-        </div>
+        
     </header>
+    <audio controls>
+        <source src="../public/lofiHornero.mp3" type="audio/mp3"> (∩^o^)⊃━☆
+    </audio>
