Grafico total con datos y audio en loop

--- a/view/compraView.mustache
+++ b/view/compraView.mustache
@@ -28,7 +28,7 @@
     </div>
     <div class="tabla">
         
-            <legend>Selecciona la cantidad de trampitas a comprar</legend>
+            <legend class="nombre">Selecciona la cantidad de trampitas a comprar</legend>
             <br>
             
             <legend> 💣 X </legend>
