--- a/view/header.mustache
+++ b/view/header.mustache
@@ -30,6 +30,6 @@
             <a href="/Perfil/mostrarPantallaPerfil"><img src="../public/epic-hornero-admin.svg" class="account"></a>
         
     </header>
-    <audio controls>
-        <source src="../public/lofiHornero.mp3" type="audio/mp3"> (∩^o^)⊃━☆
+    <audio controls autoplay loop preload="auto">
+        <source src="../public/lofiHornero.mp3" type="audio/mp3" > (∩^o^)⊃━☆
     </audio>
